@@ -94,15 +94,15 @@ echo "running tests on propeller..."
 for i in exec*.spin
 do
   j=`basename $i .spin`
-  $PROG --elf -Os -u __serial_exit -o $j.elf $i
+  $PROG --binary -Os -u __serial_exit -o $j.binary $i
   rm -f $j.out
-  propeller-load $j.elf -r -t -q > $j.out
+  propeller-load $j.binary -r -t -q > $j.out
   # the --lines=+6 skips the first 6 lines that propeller-load printed
   tail --lines=+6 $j.out >$j.txt
   if diff -ub Expect/$j.txt $j.txt
   then
     echo $j passed
-    rm -f $j.out $j.txt $j.elf $j.cpp $j.h FullDuplexSerial.cpp FullDuplexSerial.h dattest.cpp dattest.h
+    rm -f $j.out $j.txt $j.binary $j.cpp $j.h FullDuplexSerial.cpp FullDuplexSerial.h dattest.cpp dattest.h
   else
     echo $j failed
     endmsg="TEST FAILURES"
